--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header > p{
     text-align: center;
     max-width: 600px;
     margin: auto;
-    margin-bottom: 30px;
+    padding-bottom: 30px;
     padding: 0px 10px 0px 10px;
 }
 
