--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ article{
 h1{
     font-family: 'idroid', arial, sans-serif;
     text-align: left;
-    font-size: 1.8em;
+    font-size: 4vh;
     font-weight: normal;
     color: #063d1e;
 }
@@ -166,6 +166,7 @@ aside > ul{
 }
 
 li{
+    font-size: 2vh;
     padding: 0px 0px 0px 10px;
     margin-bottom: -10px;
 }
